2003-06-22  Pavel Roskin  <proski@gnu.org>

	* text.c: Eliminate.  Move colors to color.c and clr_scr() to
	layout.c.
	* main.c (restore_console): Eliminate, use handle_console().
	* Makefile.am: Remove text.c.

	* execute.c: New file with all functions for execution and
	toggling panels not specific to subshell.
	* execute.h: Corresponding header.
	* Makefile.am: Adjust for the above.

	* main.c (execute): Eliminate.  Fix all dependencies.
	(shell_execute): Constify string argument.

2003-06-09  Pavel Roskin  <proski@gnu.org>

	* key.c (mc_bindings): Remove.  Esc-">" and Esc-"<" are not
	always the same as Home and End, at least in mcedit.
	(get_key_code): Never ignore Escape outside known sequences.
	* screen.c (panel_keymap): Add Esc-">" and Esc-"<".
	* tree.c (tree_keymap): Likewise.
	* widget.c (input_map): Likewise.
	(listbox_key): Likewise.
	(check_movement_keys): Likewise.
	Reported by Miguel de Icaza <miguel@ximian.com>

2003-06-09  David Sterba  <dave@jikos.cz>

	* key.c (correct_key_code): Treat Shift-Backspace as Backspace.

2003-06-06  Pavel Roskin  <proski@gnu.org>

	* util.h: Add new match_type - match_regex.
	* ext.c: Use it everywhere.
	(regex_command): Don't change easy_patterns - it affects the
	panel filters.
	Reported by Andrew V. Samoilov <sav@bcs.zp.ua>

	* view.c (get_byte): Fix off-by-one error.  Found by Valgrind.

	* command.c (command_new): Fix memory leak.
	* subshell.c (exit_subshell): Free pty_buffer.

2003-06-05  Pavel Roskin  <proski@gnu.org>

	* dir.c (do_load_dir): Add new argument "path" to avoid the need
	to request the current directory.
	(do_reload_dir): Likewise.  Adjust all callers.

	* screen.c (panel_destroy): Rewind history to the beginning
	before freeing it.
	* widget.c (input_destroy): Likewise.
	* util.c (list_append_unique): Free data when removing duplicate
	list entries.

2003-05-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* key.c (init_key): Fix crash if TERM is unset.
